# miniembed

./: MODEL_CARD.md  README.md  pyproject.toml
miniembed/: README.md  __init__.py  compat.py  config.py  registry.py
miniembed/core/: __init__.py  types.py
miniembed/models/: __init__.py  attention.py  embedding_model.py  encoder.py  feedforward.py  pooling.py  positional.py
miniembed/tokenizers/: __init__.py  base.py  bpe.py  sentencepiece.py  unigram.py  wordlevel.py  wordpiece.py
tests/: conftest.py  test_compatibility.py  test_legacy_api.py  test_model_assembly.py  test_model_components.py  test_tokenizers.py  test_tokenizers_train.py
